[package]
name = "imply_option"
version = "0.1.0"
authors = ["Dynisious <daniel.bechaz@gmail.com>"]
description = "Provides a single trait which allows the construction of an Option based on a bool value."

repository = "https://github.com/Dynisious/imply_option"

keywords = ["option", "utility", "no-std"]

license = "0BSD"

maintenance = { status = "passively-maintained" }

include = [
    "**/*.rs",
    "Cargo.toml",
]
